# multi-agent-graphrag

./: .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  local-neo4j-creds.example.txt  main.py  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: DocumentUpload.tsx  PrivacyModal.tsx  QueryInterface.tsx  Sidebar.tsx
frontend/src/context/: CredentialsContext.tsx
frontend/src/lib/: api.ts
src/graphiti_rag/: config.py  domain.py  observability.py  playbook.py
src/graphiti_rag/agents/: context_agent.py  generator_agent.py  graph_agent.py  ontology_agent.py  retrieval_planner_agent.py
src/graphiti_rag/api/: app.py  models.py  state.py
src/graphiti_rag/api/routes/: consent.py  credentials.py  ingest.py  query.py
src/graphiti_rag/assets/: retrieval_playbook.md
src/graphiti_rag/graph/: graphiti_client.py  neo4j_client.py
src/graphiti_rag/orchestration/: pipeline.py
src/graphiti_rag/schemas/: ontology.py  ontology_compiler.py  ontology_name_sanitiser.py  ontology_type_resolution.py  retrieval_plan.py
src/graphiti_rag/tools/: document_loader.py  graph_tools.py  json_reader.py  retry.py  text_reader.py
src/graphiti_rag/tools/graph/: edges.py  episodes.py  nodes.py
src/graphiti_rag/tools/loaders/: csv_loader.py  docx_loader.py  pdf_loader.py  xlsx_loader.py
