[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-graphrag"
version = "0.1.0"
description = "Domain-agnostic agentic GraphRAG pipeline over Graphiti and Neo4j."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "graphiti-core>=0.3.0",
    "neo4j>=5.20.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "openai>=1.30",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphiti_rag*"]

[tool.ruff]
line-length = 100
target-version = "py311"
